@@ -1,6 +1,6 @@
 Recent user-visible changes to Tcl:
 
-RCS: @(#) $Id: changes,v 1.29 1998/10/23 22:22:02 welch Exp $
+RCS: @(#) $Id: changes,v 1.30 1998/10/30 00:38:28 welch Exp $
 
 1. No more [command1] [command2] construct for grouping multiple
 commands on a single command line.
@@ -3655,3 +3655,8 @@ it searched for the initialization script.  tclInitScript.h was incorrectly
 adding the parent of tcl_library to tcl_pkgPath.  This logic was moved
 into init.tcl, and the initialization of auto_path was documented.
 Thanks to Donald Porter and Tom Silva for related patches. (BW)
+
+10/29/98 (bug fix) Fixed Tcl_NotifyChannel to use Tcl_Preserve instead
+of Tcl_RegisterChannel so that 1) unregistered channels do not get
+closed after their first fileevent, and 2) errors that occur during
+close in a fileevent script are actually reflected by the close command. (BW)
